Done zip upload; Everything works so far;